# glasbox_IOT

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old
arduino_modular_testing/linear_actutator_timed/: linear_actutator_timed.ino
esp32_based_pivot/: .cproject  .project  CMakeLists.txt
esp32_based_pivot/main/: CMakeLists.txt  HAL.h  HAL_MX.c  HAL_MX.h  main.c  pivot_program.c  pivot_program.h
esp32_program_iot_system_pivot/main/: CMakeLists.txt  http_server.c  http_server.h  main.c  tasks_common.h
esp32_program_iot_system_pivot/main/webpage/: app.css  index.html
main/: .cproject  dns_server.c  dns_server.h  http_server.c  rgb_led.c  rgb_led.h  wifi_app.c  wifi_app.h  wifi_reset_button.c
main/webpage/: app.css  app.js  index.html
mqtt_component_glasbox/subscribe_publish/: .cproject  .project  sdkconfig  sdkconfig.old
mqtt_component_glasbox/subscribe_publish/main/: subscribe_publish_sample.c
stm32_master_program/BaicDesignTestingPivotDoor/: .cproject  .mxproject  .project  BaicDesignTestingPivotDoor Debug.launch  BaicDesignTestingPivotDoor.ioc
stm32_master_program/BaicDesignTestingPivotDoor/Debug/: BaicDesignTestingPivotDoor.elf  BaicDesignTestingPivotDoor.list  BaicDesignTestingPivotDoor.map  makefile
stm32_master_program/BaicDesignTestingPivotDoor/Release/: BaicDesignTestingPivotDoor.elf  BaicDesignTestingPivotDoor.list  BaicDesignTestingPivotDoor.map  makefile
stm32_master_program/final pivot/: .cproject  .mxproject  .project  final pivot Debug.launch  final pivot.ioc  final pivot.launch
stm32_master_program/final pivot/Debug/: makefile  (+4 more)
(+39 files in other folders)
